--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   fluttertoast: ^8.0.9
   http: ^0.13.4
+  internet_connection_checker: ^0.0.1+4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
