add  local data source

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   fluttertoast: ^8.0.9
   http: ^0.13.4
   internet_connection_checker: ^0.0.1+4
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^2.0.0
