--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
   http: ^0.13.4
   internet_connection_checker: ^0.0.1+4
