--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
+  get_it: ^7.2.0
   http: ^0.13.4
   internet_connection_checker: ^0.0.1+4
   shared_preferences: ^2.0.15
