--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
@@ -30,7 +32,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/ministry.png
+    - assets/images/quote.png
 
   fonts:
     - family: Tajawal
