--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
+    - lang/ar.json
+    - lang/en.json
     - assets/images/quote.png
 
   fonts:
